# tacview-realtime-client-rs

./: Cargo.toml  README.md
.github/workflows/: clippy.yaml  rustfmt.yaml  test.yaml
examples/: print_all_records.rs  print_state.rs
src/: error.rs  lib.rs  tcp.rs
src/acmi/: mod.rs
src/acmi/record/: event.rs  global_property.rs  mod.rs  object_property.rs
