[package]
name = "tacview-realtime-client"
version = "0.1.0"
edition = "2021"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
repository = "https://github.com/pbzweihander/tacview-realtime-client"
readme = "README.md"
license = "MIT"

[dependencies]
crc = "3.0.1"
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
time = { version = "0.3.17", features = ["parsing", "serde", "formatting"] }
tokio = { version = "1.25.0", features = ["net", "io-util"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
